--- a/package.json
+++ b/package.json
@@ -10,10 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/drawer": "^7.5.7",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "axios": "^1.11.0",
+    "moment": "^2.30.1",
     "react": "19.1.0",
     "react-native": "0.81.0",
-    "@react-native/new-app-screen": "0.81.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-popup-menu": "^0.18.0",
+    "react-native-reanimated": "^4.0.2",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.14.1",
+    "react-native-svg": "^15.12.1",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
