--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-gifted-charts": "^1.4.64",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.14.5",
     "react-native-popup-menu": "^0.18.0",
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.14.1",
+    "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-svg": "^15.12.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
