--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-picker/picker": "^2.11.1",
@@ -22,8 +23,12 @@
     "moment": "^2.30.1",
     "react": "19.1.0",
     "react-native": "0.81.0",
+    "react-native-async-storage": "^0.0.1",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-device-info": "^14.0.4",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-gifted-charts": "^1.4.64",
     "react-native-linear-gradient": "^2.8.3",
@@ -39,6 +44,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.4.1",
+    "semver": "^7.7.2",
     "victory-core": "^37.3.6",
     "victory-native": "^41.19.3"
   },
