--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "FinFlyTest",
-  "version": "0.0.1",
+  "name": "FinFly",
+  "version": "1.1.3",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-community/progress-bar-android": "^1.0.5",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.81.0",
     "@react-navigation/drawer": "^7.5.7",
@@ -35,7 +36,9 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.14.5",
+    "react-native-permissions": "^5.4.2",
     "react-native-popup-menu": "^0.18.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.14.1",
@@ -44,6 +47,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.4.1",
+    "rn-fetch-blob": "^0.12.0",
     "semver": "^7.7.2",
     "victory-core": "^37.3.6",
     "victory-native": "^41.19.3"
